--- a/index.html
+++ b/index.html
@@ -210,6 +210,265 @@
                 </div>
             </div>
         </div>
+        <div class="group-blocks">
+            <div class="media-block">
+                <div class="container">
+                    <div class="media-content">
+                        <div class="media-content__logo-game"></div>
+                    </div>
+                    <div class="combine">
+                        <div class="combine-content">
+                            <h2 class="combine-content__title">world of tanks</h2>
+                            <p class="combine-content__text">
+                                Массовая многопользовательская онлайн-игра (ММО), которая позволяет окунуться в мир масштабных 
+                                морских баталий и опробовать в бою легендарные военные корабли первой половины ХХ века.
+                            </p>
+                            <div class="platforms">
+                                <div class="platform">
+                                    <span class="platform__logo"></span>
+                                    <span class="platform__text">windows</span>
+                                </div>
+                                <div class="platform">
+                                    <span class="platform__logo"></span>
+                                    <span class="platform__text">mac</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="combine-content">
+                            <h2 class="combine-content__title">ссылка</h2>
+                            <ul class="list-links">
+                                <a href="#">
+                                    <li class="list-links__items">
+                                        <span class="point"></span>
+                                        <p class="bottom-frame">Сайт игры</p>
+                                    </li>
+                                </a>
+                                <a href="#">
+                                    <li class="list-links__items">
+                                        <span class="point"></span>
+                                        <p class="bottom-frame">Форум</p>
+                                    </li>
+                                </a>
+                                <a href="#">
+                                    <li class="list-links__items">
+                                        <span class="point"></span>
+                                        <p class="bottom-frame">Центр поддержки</p>
+                                    </li>
+                                </a>
+                                <a href="#">
+                                    <li class="list-links__items">
+                                        <span class="point"></span>
+                                        <p class="bottom-frame">Пригласи друга</p>
+                                    </li>
+                                </a>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="group-blocks">
+            <div class="media-block">
+                <div class="container">
+                    <div class="media-content">
+                        <div class="media-content__logo-game"></div>
+                    </div>
+                    <div class="combine">
+                        <div class="combine-content">
+                            <h2 class="combine-content__title">world of tanks</h2>
+                            <p class="combine-content__text">
+                                Окунитесь в мир морских сражений в World of Warships: Legends — новой MMO для консолей.
+                                Покоряйте моря на величайших кораблях в истории под руководством легендарных командиров!
+                            </p>
+                            <div class="platforms">
+                                <div class="platform">
+                                    <span class="platform__logo"></span>
+                                    <span class="platform__text">windows</span>
+                                </div>
+                                <div class="platform">
+                                    <span class="platform__logo"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="combine-content">
+                            <h2 class="combine-content__title">ссылка</h2>
+                            <ul class="list-links">
+                                <a href="#">
+                                    <li class="list-links__items">
+                                        <span class="point"></span>
+                                        <p class="bottom-frame">Сайт игры</p>
+                                    </li>
+                                </a>
+                                <a href="#">
+                                    <li class="list-links__items">
+                                        <span class="point"></span>
+                                        <p class="bottom-frame">Центр поддержки</p>
+                                    </li>
+                                </a>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="group-blocks">
+            <div class="media-block">
+                <div class="container">
+                    <div class="media-content">
+                        <div class="media-content__logo-game"></div>
+                    </div>
+                    <div class="combine">
+                        <div class="combine-content">
+                            <h2 class="combine-content__title">world of tanks</h2>
+                            <p class="combine-content__text">
+                                Мобильный free-to-play MMO-экшен, посвящённый танковым сражениям середины ХХ века и предлагающий абсолютно новый формат командных онлайн-баталий.
+                            </p>
+                            <div class="platforms">
+                                <div class="platform">
+                                    <span class="platform__logo"></span>
+                                    <span class="platform__text">windws</span>
+                                </div>
+                                <div class="platform">
+                                    <span class="platform__logo"></span>
+                                    <span class="platform__text">android</span>
+                                </div>
+                                <div class="platform">
+                                    <span class="platform__logo"></span>
+                                    <span class="platform__text">ios</span>
+                                </div>
+                                <div class="platform">
+                                    <span class="platform__logo"></span>
+                                    <span class="platform__text">mac</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="combine-content">
+                            <h2 class="combine-content__title">ссылка</h2>
+                            <ul class="list-links">
+                                <a href="#">
+                                    <li class="list-links__items">
+                                        <span class="point"></span>
+                                        <p class="bottom-frame">Сайт игры</p>
+                                    </li>
+                                </a>
+                                <a href="#">
+                                    <li class="list-links__items">
+                                        <span class="point"></span>
+                                        <p class="bottom-frame">Форум</p>
+                                    </li>
+                                </a>
+                                <a href="#">
+                                    <li class="list-links__items">
+                                        <span class="point"></span>
+                                        <p class="bottom-frame">Центр поддержки</p>
+                                    </li>
+                                </a>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="group-blocks">
+            <div class="media-block">
+                <div class="container">
+                    <div class="media-content">
+                        <div class="media-content__logo-game"></div>
+                    </div>
+                    <div class="combine">
+                        <div class="combine-content">
+                            <h2 class="combine-content__title">world of tanks</h2>
+                            <p class="combine-content__text">
+                                Командный free-to-play экшен про современный спецназ. Участвуйте в реалистичных онлайн-боях
+                                и выполняйте тактические миссии с отрядом оперативников из разных стран мира.е.
+                            </p>
+                            <div class="platforms">
+                                <div class="platform">
+                                    <span class="platform__logo"></span>
+                                    <span class="platform__text">windows</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="combine-content">
+                            <h2 class="combine-content__title">ссылка</h2>
+                            <ul class="list-links">
+                                <a href="#">
+                                    <li class="list-links__items">
+                                        <span class="point"></span>
+                                        <p class="bottom-frame">Сайт игры</p>
+                                    </li>
+                                </a>
+                                <a href="#">
+                                    <li class="list-links__items">
+                                        <span class="point"></span>
+                                        <p class="bottom-frame">Центр поддержки</p>
+                                    </li>
+                                </a>
+                                <a href="#">
+                                    <li class="list-links__items">
+                                        <span class="point"></span>
+                                        <p class="bottom-frame">Форум</p>
+                                    </li>
+                                </a>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="group-blocks">
+            <div class="media-block">
+                <div class="container">
+                    <div class="media-content">
+                        <div class="media-content__logo-game"></div>
+                    </div>
+                    <div class="combine">
+                        <div class="combine-content">
+                            <h2 class="combine-content__title">world of tanks</h2>
+                            <p class="combine-content__text">
+                                Стратегия в жанре wargame, посвящённая Второй мировой войне. Вам предстоит руководить войсками во время операции 
+                                «Багратион» — крупномасштабного советского наступления против вермахта.
+                            </p>
+                            <div class="platforms">
+                                <div class="platform">
+                                    <span class="platform__logo"></span>
+                                    <span class="platform__text">windows</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="combine-content">
+                            <h2 class="combine-content__title">ссылка</h2>
+                            <ul class="list-links">
+                                <a href="#">
+                                    <li class="list-links__items">
+                                        <span class="point"></span>
+                                        <p class="bottom-frame">Премиум магазин</p>
+                                    </li>
+                                </a>
+                                <a href="#">
+                                    <li class="list-links__items">
+                                        <span class="point"></span>
+                                        <p class="bottom-frame">Центр поддержки</p>
+                                    </li>
+                                </a>
+                                <a href="#">
+                                    <li class="list-links__items">
+                                        <span class="point"></span>
+                                        <p class="bottom-frame">Wiki</p>
+                                    </li>
+                                </a>
+                                <a href="#">
+                                    <li class="list-links__items">
+                                        <span class="point"></span>
+                                        <p class="bottom-frame">Discord</p>
+                                    </li>
+                                </a>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
