--- a/index.html
+++ b/index.html
@@ -237,30 +237,30 @@
                         <div class="combine-content">
                             <h2 class="combine-content__title">ссылка</h2>
                             <ul class="list-links">
-                                <a href="#">
-                                    <li class="list-links__items">
+                                <li class="list-links__items">
+                                    <a href="#" class="link-point">
                                         <span class="point"></span>
                                         <p class="bottom-frame">Сайт игры</p>
-                                    </li>
-                                </a>
-                                <a href="#">
-                                    <li class="list-links__items">
+                                    </a>
+                                </li>
+                                <li class="list-links__items">
+                                    <a href="#" class="link-point">
                                         <span class="point"></span>
                                         <p class="bottom-frame">Форум</p>
-                                    </li>
-                                </a>
-                                <a href="#">
-                                    <li class="list-links__items">
+                                    </a>
+                                </li>
+                                <li class="list-links__items">
+                                    <a href="#" class="link-point">
                                         <span class="point"></span>
                                         <p class="bottom-frame">Центр поддержки</p>
-                                    </li>
-                                </a>
-                                <a href="#">
-                                    <li class="list-links__items">
+                                    </a>
+                                </li>
+                                <li class="list-links__items">
+                                    <a href="#" class="link-point">
                                         <span class="point"></span>
                                         <p class="bottom-frame">Пригласи друга</p>
-                                    </li>
-                                </a>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -293,18 +293,18 @@
                         <div class="combine-content">
                             <h2 class="combine-content__title">ссылка</h2>
                             <ul class="list-links">
-                                <a href="#">
-                                    <li class="list-links__items">
+                                <li class="list-links__items">
+                                    <a href="#" class="link-point">
                                         <span class="point"></span>
                                         <p class="bottom-frame">Сайт игры</p>
-                                    </li>
-                                </a>
-                                <a href="#">
-                                    <li class="list-links__items">
+                                    </a>
+                                </li>
+                                <li class="list-links__items">
+                                    <a href="#" class="link-point">
                                         <span class="point"></span>
                                         <p class="bottom-frame">Центр поддержки</p>
-                                    </li>
-                                </a>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -345,24 +345,24 @@
                         <div class="combine-content">
                             <h2 class="combine-content__title">ссылка</h2>
                             <ul class="list-links">
-                                <a href="#">
-                                    <li class="list-links__items">
+                                <li class="list-links__items">
+                                    <a href="#" class="link-point">
                                         <span class="point"></span>
                                         <p class="bottom-frame">Сайт игры</p>
-                                    </li>
-                                </a>
-                                <a href="#">
-                                    <li class="list-links__items">
+                                    </a>
+                                </li>
+                                <li class="list-links__items">
+                                    <a href="#" class="link-point">
                                         <span class="point"></span>
                                         <p class="bottom-frame">Форум</p>
-                                    </li>
-                                </a>
-                                <a href="#">
-                                    <li class="list-links__items">
+                                    </a>
+                                </li>
+                                <li class="list-links__items">
+                                    <a href="#" class="link-point">
                                         <span class="point"></span>
                                         <p class="bottom-frame">Центр поддержки</p>
-                                    </li>
-                                </a>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -392,24 +392,24 @@
                         <div class="combine-content">
                             <h2 class="combine-content__title">ссылка</h2>
                             <ul class="list-links">
-                                <a href="#">
-                                    <li class="list-links__items">
+                                <li class="list-links__items">
+                                    <a href="#" class="link-point">
                                         <span class="point"></span>
                                         <p class="bottom-frame">Сайт игры</p>
-                                    </li>
-                                </a>
-                                <a href="#">
-                                    <li class="list-links__items">
+                                    </a>
+                                </li>
+                                <li class="list-links__items">
+                                    <a href="#" class="link-point">
                                         <span class="point"></span>
                                         <p class="bottom-frame">Центр поддержки</p>
-                                    </li>
-                                </a>
-                                <a href="#">
-                                    <li class="list-links__items">
+                                    </a>
+                                </li>
+                                <li class="list-links__items">
+                                    <a href="#" class="link-point">
                                         <span class="point"></span>
                                         <p class="bottom-frame">Форум</p>
-                                    </li>
-                                </a>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -439,30 +439,30 @@
                         <div class="combine-content">
                             <h2 class="combine-content__title">ссылка</h2>
                             <ul class="list-links">
-                                <a href="#">
-                                    <li class="list-links__items">
+                                <li class="list-links__items">
+                                    <a href="#" class="link-point">
                                         <span class="point"></span>
                                         <p class="bottom-frame">Премиум магазин</p>
-                                    </li>
-                                </a>
-                                <a href="#">
-                                    <li class="list-links__items">
+                                    </a>
+                                </li>
+                                <li class="list-links__items">
+                                    <a href="#" class="link-point">
                                         <span class="point"></span>
                                         <p class="bottom-frame">Центр поддержки</p>
-                                    </li>
-                                </a>
-                                <a href="#">
-                                    <li class="list-links__items">
+                                    </a>
+                                </li>
+                                <li class="list-links__items">
+                                    <a href="#" class="link-point">
                                         <span class="point"></span>
                                         <p class="bottom-frame">Wiki</p>
-                                    </li>
-                                </a>
-                                <a href="#">
-                                    <li class="list-links__items">
+                                    </a>
+                                </li>
+                                <li class="list-links__items">
+                                    <a href="#" class="link-point">
                                         <span class="point"></span>
                                         <p class="bottom-frame">Discord</p>
-                                    </li>
-                                </a>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
