--- a/index.html
+++ b/index.html
@@ -541,8 +541,30 @@
                 </div>
             </div>
         </div>
+        <div class="cross"></div>
         <div class="container-box">
+            <div class="promo-block">
+                <div class="limited-height">
+                    <div class="promo-title">
+                        <h3 class="promo-title__title">«Дорога на Берлин»</h3>
+                        <p class="promo-title__text">Сразись с искусственным интеллектом и выиграй новый танк ИС-2 экранированный!</p>
+                        <div class="learn-more">
+                            <a href="#" class="learn-more__text">узнать больше</a>
+                        </div>
+                    </div>
+                    <div class="logo-wot"></div>
+                </div>
+            </div>
+        </div>
+        <div class="slider-store">
+            <div class="slider-block">
 
+            </div>
+            <div class="block-store">
+                <span class="link-store">
+                    <a href="#" class="premium-store"></a>
+                </span>
+            </div>
         </div>
     </section>
 </body>
