completed the slider block

--- a/index.html
+++ b/index.html
@@ -559,12 +559,11 @@
         <div class="slider-store">
             <div class="slider-block">
                 <div class="slider-width">
-                    <div class="slider-img">
-                        <div class="slider-carousel">
-                            <div class="slider-carousel__arrows-one"></div>
-                            <p class="slider-carousel__text">Обновление 1.9. Актуальная версия игры</p>
-                            <div class="slider-carousel__arrows-two"></div>
-                        </div>
+                    <div class="slider-carousel">
+                        <div class="slider-img"></div>
+                        <div class="slider-carousel__arrows-one"></div>
+                        <p class="slider-carousel__text">Обновление 1.9. Актуальная версия игры</p>
+                        <div class="slider-carousel__arrows-two"></div>
                     </div>
                 </div>
             </div>
