--- a/index.html
+++ b/index.html
@@ -559,12 +559,14 @@
         <div class="slider-store">
             <div class="slider-block">
                 <div class="slider-width">
-                    <div class="slider-carousel">
-                        <div class="slider-img"></div>
-                        <div class="slider-carousel__arrows-one"></div>
-                        <p class="slider-carousel__text">Обновление 1.9. Актуальная версия игры</p>
-                        <div class="slider-carousel__arrows-two"></div>
-                    </div>
+                    <a href="#">
+                        <span class="slider-carousel">
+                            <span class="slider-img"></span>
+                            <span class="slider-carousel__arrows-one"></span>
+                            <p class="slider-carousel__text">Обновление 1.9. Актуальная версия игры</p>
+                            <span class="slider-carousel__arrows-two"></span>
+                        </span>
+                    </a>
                 </div>
             </div>
             <div class="block-store">
