--- a/index.html
+++ b/index.html
@@ -556,17 +556,37 @@
                 </div>
             </div>
         </div>
-        <div class="slider-store">
-            <div class="slider-block">
-                <div class="slider-width">
-                    <a href="#">
-                        <span class="slider-carousel">
-                            <span class="slider-img"></span>
-                            <span class="slider-carousel__arrows-one"></span>
+        <div class="carousel-store">
+            <div class="slider-store">
+                <div class="slider-block">
+                    <div class="slider-block__arrows-one"></div>
+                    <div class="slider-block__arrows-two"></div>
+                    <div class="slider-width">
+                        <div class="slider-carousel">
+                            <div class="slider-img"></div>
                             <p class="slider-carousel__text">Обновление 1.9. Актуальная версия игры</p>
-                            <span class="slider-carousel__arrows-two"></span>
-                        </span>
-                    </a>
+                        </div>
+                        <div class="slider-carousel">
+                            <div class="slider-img"></div>
+                            <p class="slider-carousel__text">Участвуй в онлайн-турнирах</p>
+                        </div>
+                        <div class="slider-carousel">
+                            <div class="slider-img"></div>
+                            <p class="slider-carousel__text">Боевой пропуск: уникальные награды в случайных боях</p>
+                        </div>
+                        <div class="slider-carousel">
+                            <div class="slider-img"></div>
+                            <p class="slider-carousel__text">Реферальная программа 2.0: третий сезона</p>
+                        </div>
+                        <div class="slider-carousel">
+                            <div class="slider-img"></div>
+                            <p class="slider-carousel__text">Специальные предложения</p>
+                        </div>
+                        <div class="slider-carousel">
+                            <div class="slider-img"></div>
+                            <p class="slider-carousel__text">Акция «Прямой эфир». Набор «Звёздная ночь»</p>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="block-store">
