--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>World of Tanks – Бесплатная Онлайн-игра про Танки</title>
 </head>
 <body>
-    <header>
+    <header class="common-header">
         <div class="common_menu">
             <div class="left_menu">
                 <div class="additional_tab">
@@ -593,6 +593,98 @@
                 <span class="link-store">
                     <a href="#" class="premium-store"></a>
                 </span>
+            </div>
+        </div>
+    </section>
+    <section class="latest-news">
+        <div class="central-columns">
+            <header class="columns-header">
+                <h2 class="columns-header__title">последние новости</h2>
+            </header>
+            <div class="flex-blcks">
+                <div class="three-columns">
+                    <article class="small-news">
+                        <a href="#" class="news-link">
+                            <span class="news-link__img"></span>
+                        </a>
+                        <div class="news-info">
+                            <a href="#" class="text-news">
+                                <span class="text-news__text">Противостояние: «Орёл или решка»</span>
+                                <span class="text-news__text">Смотрите новый эпизод противостояния двух легендарных командиров.</span>
+                            </a>
+                        </div>
+                    </article>
+                </div>
+                <div class="three-columns">
+                    <article class="small-news">
+                        <a href="#" class="news-link">
+                            <span class="news-link__img"></span>
+                        </a>
+                        <div class="news-info">
+                            <a href="#" class="text-news">
+                                <span class="text-news__text">Акт II. Новые элементы кастомизации в юбилейном магазине!</span>
+                                <span class="text-news__text">Устанавливайте на технику уникальные стили, декали, эмблемы и надписи.</span>
+                            </a>
+                        </div>
+                    </article>
+                    <article class="small-news">
+                        <a href="#" class="news-link">
+                            <span class="news-link__img" style="background: url(./images/news-img/wot_1.9.1_615x346.jpg) center/contain no-repeat;"></span>
+                        </a>
+                        <div class="news-info">
+                            <a href="#" class="text-news">
+                                <span class="text-news__text">Общий тест обновления 1.9.1</span>
+                                <span class="text-news__text">Карта «Берлин» в случайных боях, новая механика изменения внешнего вида и многое другое.</span>
+                            </a>
+                        </div>
+                    </article>
+                    <article class="small-news">
+                        <a href="#" class="news-link">
+                            <span class="news-link__img" style="background: url(./images/news-img/ekipazh1.jpg) center/contain no-repeat;"></span>
+                        </a>
+                        <div class="news-info">
+                            <a href="#" class="text-news">
+                                <span class="text-news__text">Акция выходного дня. Скидки для экипажа</span>
+                                <span class="text-news__text">С 15 до 18 мая — скидки на обучение и переобучение, на сброс навыков и на смену специальности.</span>
+                            </a>
+                        </div>
+                    </article>
+                </div>
+                <div class="three-columns">
+                    <article class="small-news">
+                        <a href="#" class="news-link">
+                            <span class="news-link__img" style="background: url(./images/news-img/1_5oifsmi_615x.jpg) center/contain no-repeat;"></span>
+                        </a>
+                        <div class="news-info">
+                            <a href="#" class="text-news">
+                                <span class="text-news__text">Акции мая с Кариной. Часть 2</span>
+                                <span class="text-news__text">Очаровательная Карина рассказывает о новостях и акциях второй половины мая.</span>
+                            </a>
+                        </div>
+                    </article>
+                    <article class="small-news">
+                        <a href="#" class="news-link">
+                            <span class="news-link__img" style="background: url(./images/news-img/gudok_615x346.jpg) center/contain no-repeat;"></span>
+                        </a>
+                        <div class="news-info">
+                            <a href="#" class="text-news">
+                                <span class="text-news__text">Акт II. Погудим на славу!</span>
+                                <span class="text-news__text">На неделю активной фазы мы вернём из прошлого гудок.</span>
+                            </a>
+                        </div>
+                    </article>
+                    <article class="small-news">
+                        <a href="#" class="news-link">
+                            <span class="news-link__img" style="background: url(./images/news-img/bm_615.jpg) center/contain no-repeat;"></span>
+                        </a>
+                        <div class="news-info">
+                            <a href="#" class="text-news">
+                                <span class="text-news__text">Акт II. Готовьтесь к выполнению юбилейных задач!</span>
+                                <span class="text-news__text">Выполняйте новые боевые задачи, чтобы заработать ещё больше юбилейных монет.</span>
+                            </a>
+                        </div>
+                    </article>
+                </div>
             </div>
         </div>
     </section>
